# docs/swagger.json
@@ -258,6 +258,13 @@
                 "operationId": "create-company",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Строка авторизации",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Название компании (минимум 6 символов)",
                         "name": "name",
                         "in": "body",
@@ -307,7 +314,7 @@
                 }
             }
         },
-        "/companies/mine": {
+        "/companies/my": {
             "get": {
                 "description": "Возвращает список компаний, связанных с текущим пользователем.",
                 "consumes": [
